--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,19 @@
 :root {
+  /*Fonts*/
+  --font-signika: 'Signika Negative', sans-serif;
+  --font-roboto: 'Roboto Slab', sans-serif;
   --font-sarabun: 'Sarabun', sans-serif;
+  /*Font colors*/
+  --font-color-primary: rgb(150, 130, 221);
+
+  /*Background colors*/
   --bg-dark-body: #04030f;
+  --bg-light-header: rgb(191, 182, 223);
 }
 
 html {
   box-sizing: border-box;
-  font-family: var(--font-sarabun);
+  font-family: var(--font-signika);
   font-size: 16px;
   scroll-behavior: smooth;
 }
@@ -25,11 +33,20 @@ body {
 
 a {
   text-decoration: none;
+  color: rgb(22, 22, 22);
+  font-weight: 400;
+}
+
+a:hover {
+  border-bottom: 1px solid rgb(107, 102, 124);
+  color: rgb(0, 0, 0);
+
+
 }
 
 h1 {
   font-size: 2rem;
-  color: red;
+  color: var(--font-color-primary);
 }
 
 h2 {
@@ -52,20 +69,27 @@ p {
 
 
 /*Mobile version*/
-.header {
+.container {
   width: 100%;
   position: fixed;
   bottom: 0;
   padding: 0 1rem;
   height: 60px;
-  background-color: rgb(56, 117, 64);
+  background-color: var(--bg-light-header);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.nav-menu {
+.header-logo {
+  font-family: var(--font-signika);
+  font-size: 2rem;
+  font-weight: 800;
+}
+
+.header-menu {
   display: flex;
+  /* justify-items: center; */
   /* display: none; */
   gap: 1rem;
 }
