--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,13 @@ html {
 
 
 body {
-  margin: auto;
+  margin: 0;
   overflow-x: hidden;
   min-width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 a {
@@ -37,12 +41,12 @@ a {
   font-weight: 400;
 }
 
-a:hover {
+a:hover,
+.enlace-active {
   border-bottom: 1px solid rgb(107, 102, 124);
   color: rgb(0, 0, 0);
-
-
 }
+
 
 h1 {
   font-size: 2rem;
@@ -73,6 +77,7 @@ p {
   width: 100%;
   position: fixed;
   bottom: 0;
+  left: 0;
   padding: 0 1rem;
   height: 60px;
   background-color: var(--bg-light-header);
