--- a/styles.css
+++ b/styles.css
@@ -43,10 +43,13 @@ a {
 
 a:hover,
 .enlace-active {
-  border-bottom: 1px solid rgb(107, 102, 124);
   color: rgb(0, 0, 0);
 }
 
+.enlace-active {
+  border-bottom: 1px solid rgb(107, 102, 124);
+  color: rgb(0, 0, 0);
+}
 
 h1 {
   font-size: 2rem;
