--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,13 @@
   /*Background colors*/
   --bg-dark-body: #04030f;
   --bg-light-header: rgb(191, 182, 223);
+
+  /*Accesories*/
+  --button-color: rgb(252, 226, 247);
+  --button-hover-color: rgb(220, 255, 253);
 }
+
+
 
 html {
   box-sizing: border-box;
@@ -104,4 +110,19 @@ p {
 
 section {
   height: 100vh;
+}
+
+.start-btn {
+  width: 200px;
+  height: 50px;
+  background-color: var(--button-color);
+  font-size: 1rem;
+  font-family: inherit;
+  border: 1px solid black;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.start-btn:hover {
+  background-color: var(--button-hover-color);
 }
