--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ html {
 body {
   background-color: white;
   margin: 0;
+  padding: 0 10px;
   overflow-x: hidden;
   min-width: 400px;
   display: flex;
@@ -79,7 +80,7 @@ p {
 }
 
 img {
-  max-width: 95%;
+  max-width: 100%;
   height: auto;
   border-radius: 2px;
   filter: grayscale(30%);
