--- a/styles.css
+++ b/styles.css
@@ -150,18 +150,18 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1rem;
 }
 
 .section#about {
+  width: 90%;
   justify-content: center;
 }
 
-.section#about::before {
-  z-index: 999;
-  background: rgba(0, 0, 0, 0.767);
-}
+
 
 .title {
+  font-size: 5vw;
   text-align: center;
 }
 
