--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
 html {
   box-sizing: border-box;
   font-family: var(--font-signika);
-  font-size: 16px;
+
   scroll-behavior: smooth;
 }
 
@@ -36,9 +36,10 @@ body {
   margin: 0;
   overflow-x: hidden;
   min-width: 400px;
+  min-height: 400px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: space-between; */
   align-items: center;
 }
 
@@ -76,9 +77,9 @@ h4 {
   font-size: 1rem;
 }
 
-p {
+/* p {
   font-size: 1rem;
-}
+} */
 
 img {
   max-width: 100%;
@@ -95,8 +96,9 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   padding: 0 10px;
+  gap: 2rem;
 }
 
 .container {
@@ -117,7 +119,6 @@ img {
   display: flex;
   flex-direction: row;
   align-items: center;
-
   gap: 2px;
 }
 
@@ -149,6 +150,7 @@ img {
 .section {
   width: 100%;
   height: 100vh;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -161,24 +163,35 @@ img {
 }
 
 .section#articles {
+  width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  gap: 2vh;
-  height: 100vh;
+  gap: 2%;
 }
 
 .article-container {
-  background: var(--gradient-color-2);
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   width: 90%;
-  height: auto;
+  background: var(--gradient-color-2);
+  min-height: 80px;
   border-radius: 2.5px;
+  margin-bottom: 15vh;
   padding: 10px;
 }
 
-.article-container>p {
-  max-width: 100%;
+
+.p-article {
+  font-size: .8rem;
+  max-height: 70%;
+  overflow: hidden;
+  flex-grow: 1;
 }
+
+
 
 .title {
   font-size: 5vw;
