--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,6 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 0 10px;
   gap: 2rem;
 }
 
@@ -150,6 +149,7 @@ img {
 .section {
   width: 100%;
   height: 100vh;
+  padding: 0 10px;
   min-height: 200px;
   display: flex;
   flex-direction: column;
@@ -164,76 +164,48 @@ img {
 
 
 .section#articles {
+  background: var(--gradient-color-2);
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  gap: 2%;
+  padding: 0;
 }
 
 .articles-container {
-  width: 95%;
-  height: 100vh;
+  background: var(--gradient-color);
+  width: 90%;
+  height: 75%;
+  border-radius: 5px;
   display: flex;
+  align-items: center;
+}
+
+.article-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  min-height: 80px;
+  padding: 10px;
 }
 
 .articles-container>svg {
-  fill: rgb(223, 185, 223);
-  opacity: 90%;
-  border-radius: 50%;
-  position: relative;
-  top: 40%;
-  margin: 5px;
-}
-
-.back,
-.next {
+  margin: 10px;
+  z-index: 998;
   cursor: pointer;
-  opacity: 50%;
+  opacity: 20%;
 }
 
 .back:hover,
 .next:hover {
   opacity: 100%;
-
 }
-
-
-.article-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-grow: 1;
-  width: 90%;
-  background: var(--gradient-color-2);
-  min-height: 80px;
-  border-radius: 2.5px;
-  margin-bottom: 15vh;
-  padding: 10px;
-}
-
-
 
 .none {
   display: none;
-}
-
-
-.art0 {
-  background-color: rgba(48, 48, 48, 0.527);
-}
-
-.art1 {
-  background-color: rgba(48, 48, 48, 0.527);
-}
-
-.art2 {
-  background-color: rgba(48, 48, 48, 0.527);
-}
-
-.view {
-  display: block;
 }
 
 .p-article {
@@ -242,8 +214,6 @@ img {
   overflow: hidden;
   flex-grow: 1;
 }
-
-
 
 .title {
   font-size: 5vw;
