--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ img {
   align-items: center;
   justify-content: space-between;
   gap: 2rem;
+  background: var(--gradient-color-2);
 }
 
 .container {
@@ -162,9 +163,33 @@ img {
   justify-content: center;
 }
 
+.title {
+  font-size: 5vw;
+  text-align: center;
+}
+
+.start-btn {
+  width: 200px;
+  height: 50px;
+  background: var(--button-color);
+  color: white;
+  font-size: 1.3rem;
+  font-weight: 400;
+  font-family: inherit;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 3px;
+  cursor: pointer;
+  text-decoration: none;
+  box-shadow: 1.5px 1.5px 1px rgb(0, 0, 0);
+  opacity: 95%;
+}
+
+.start-btn:hover {
+  opacity: 100%;
+}
 
 .section#articles {
-  background: var(--gradient-color-2);
+  /* background: var(--gradient-color-2); */
   width: 100%;
   height: 100vh;
   display: flex;
@@ -193,10 +218,15 @@ img {
 }
 
 .articles-container>svg {
-  margin: 10px;
+  margin: 20px;
   z-index: 998;
   cursor: pointer;
   opacity: 20%;
+  fill: none;
+  stroke: rgba(0, 0, 0, 0.719);
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 20px;
 }
 
 .back:hover,
@@ -211,31 +241,10 @@ img {
 .p-article {
   font-size: .8rem;
   max-height: 70%;
-  overflow: hidden;
+  overflow-x: hidden;
   flex-grow: 1;
 }
 
-.title {
-  font-size: 5vw;
-  text-align: center;
-}
-
-.start-btn {
-  width: 200px;
-  height: 50px;
-  background: var(--button-color);
-  color: white;
-  font-size: 1.3rem;
-  font-weight: 400;
-  font-family: inherit;
-  border: 1px solid rgb(0, 0, 0);
-  border-radius: 3px;
-  cursor: pointer;
-  text-decoration: none;
-  box-shadow: 1.5px 1.5px 1px rgb(0, 0, 0);
-  opacity: 95%;
-}
-
-.start-btn:hover {
-  opacity: 100%;
+.p-article::-webkit-scrollbar {
+  width: 5px;
 }
