--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
   /*Background colors*/
   --gradient-color: linear-gradient(103.3deg, rgb(231, 208, 252) 30%, rgb(173, 206, 255) 55.7%, rgba(162, 186, 245, 1) 81.8%);
   --gradient-color-2: linear-gradient(103.3deg, rgba(252, 225, 208, 0.329) 30%, rgba(255, 173, 214, 0.336) 55.7%, rgba(162, 186, 245, 0.301) 81.8%);
+  --gradient-color-3: linear-gradient(103.3deg, rgba(231, 208, 252, 0.301) 30%, rgba(173, 206, 255, 0.13) 55.7%, rgba(162, 186, 245, 0.199) 81.8%);
   --bg-dark-body: #04030f;
   --bg-light-header: rgb(219, 255, 247);
 
@@ -163,7 +164,7 @@ img {
 }
 
 .title {
-  font-size: 5vw;
+  font-size: 4vw;
   text-align: center;
 }
 
@@ -199,12 +200,15 @@ img {
 
 .articles-container {
   background: var(--gradient-color);
-  width: 95%;
+  width: 90%;
   height: 75%;
   border-radius: 5px;
   display: flex;
   align-items: center;
+  box-shadow: 0 0 1px black;
 }
+
+
 
 .article-item {
   display: flex;
@@ -219,9 +223,7 @@ img {
   margin: 20px;
   z-index: 998;
   cursor: pointer;
-  opacity: 20%;
-  fill: none;
-  stroke: rgba(0, 0, 0, 0.719);
+  opacity: 10%;
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 20px;
@@ -230,6 +232,7 @@ img {
 .back:hover,
 .next:hover {
   opacity: 100%;
+  fill: rgba(0, 0, 0, 0.459);
 }
 
 .none {
@@ -237,7 +240,7 @@ img {
 }
 
 .p-article {
-  font-size: .8rem;
+  font-size: .7rem;
   max-height: 70%;
   overflow-x: hidden;
   flex-grow: 1;
@@ -245,4 +248,11 @@ img {
 
 .p-article::-webkit-scrollbar {
   width: 5px;
+}
+
+.section#contact {
+  width: 100%;
+  height: 50vh;
+  background-color: black;
+  color: white;
 }
