--- a/styles.css
+++ b/styles.css
@@ -234,8 +234,11 @@ img {
   stroke-width: 20px;
 }
 
+
 .back:hover,
 .next:hover {
+  width: 50px;
+  height: 50px;
   opacity: 100%;
   fill: rgba(0, 0, 0, 0.459);
 }
