--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
   --gradient-color-3: linear-gradient(103.3deg, rgb(36, 24, 46) 30%, rgb(19, 34, 57) 55.7%, rgb(23, 33, 57) 81.8%);
   --bg-dark-body: #04030f;
   --bg-light-header: rgb(219, 255, 247);
+  --menu-color: rgba(182, 211, 255, 0.856);
 
   /*Accesories*/
   --button-color: black;
@@ -102,7 +103,7 @@ img {
 }
 
 .container {
-  background-color: rgba(182, 211, 255, 0.856);
+  background: var(--menu-color);
   -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
   width: 100%;
@@ -225,10 +226,11 @@ img {
 }
 
 .articles-container>svg {
+  fill: var(--menu-color);
   margin: 20px;
   z-index: 998;
   cursor: pointer;
-  opacity: 10%;
+  opacity: 20%;
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 20px;
@@ -237,10 +239,8 @@ img {
 
 .back:hover,
 .next:hover {
-  width: 50px;
-  height: 50px;
-  opacity: 100%;
-  fill: rgba(0, 0, 0, 0.459);
+  fill: var(--menu-color);
+  opacity: 50%;
 }
 
 .none {
