--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
   /*Background colors*/
   --menu-color: rgba(182, 211, 255, 0.856);
-  --field-color: rgba(143, 170, 211, 0.856);
+  --bg-elements: rgba(13, 17, 23, 0.912);
 
   /*Accesories*/
   --button-color: black;
@@ -258,7 +258,6 @@ img {
 }
 
 .section#contact {
-  background-color: rgba(13, 17, 23, 0.912);
   display: flex;
   justify-content: center;
   width: 100%;
@@ -267,33 +266,30 @@ img {
 }
 
 form {
-  width: 100%;
-  margin: auto;
-}
-
-label {
-  padding: 2px;
+  padding: 4px 10px;
+  background-color: var(--bg-elements);
+  -webkit-backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px);
+  color: white;
+  width: 90%;
+  height: auto;
+  border-radius: 5px;
+  box-shadow: 0 0 2.5px black;
 }
 
 .field {
-  -webkit-backdrop-filter: blur(100px);
-  backdrop-filter: blur(100px);
-  color: var(--font-color-1);
-  margin: 6px auto;
-  border-radius: 3px;
-  padding: 0 4px 4px 4px;
+  color: white;
+  margin: 15px 10px 7px 10px;
 }
 
 input#name,
 #email,
 #message {
-  background-color: var(--menu-color);
   width: 100%;
-  border-radius: 3px;
+  border-radius: 2px;
   border: none;
   outline: none;
-  opacity: 20%;
-  padding: 5px;
+  padding: 5px 0 5px 3px;
   font-family: inherit;
   font-weight: 300;
 }
@@ -309,6 +305,24 @@ input#name,
 #message.field-active,
 #name.field-active,
 #email.field-active {
-  background-color: var(--menu-color);
+  background-color: white;
+  box-shadow: 0px 0px 1px 1px var(--menu-color);
+}
+
+#submit {
+  margin: 10px 0px 0px 0px;
+  background: var(--menu-color);
+  font-size: 1.1rem;
+  font-weight: 400;
+  font-family: inherit;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 3px;
+  cursor: pointer;
+  text-decoration: none;
+  box-shadow: 1.5px 1.5px 1px rgb(0, 0, 0);
   opacity: 80%;
+}
+
+#submit:hover {
+  opacity: 100%;
 }
